crates/strider-analyze/tests/snapshots/v3__arm_thumb__memory__array_copy.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ r1", shape=house, fillcolor="#163030"];
  "10" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="φ r1", shape=house, fillcolor="#163030"];
  "5" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ r0", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "21" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="φ r0", shape=house, fillcolor="#163030"];
  "5" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "29" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "29" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "28" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
