crates/strider-analyze/tests/snapshots/v3__arm_thumb__memory__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x588:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x578:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x9:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v14" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x55c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x5a0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v26" [color="#888888", style=dashed];
  "v26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x5a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v34" [color="#888888", style=dashed];
  "v34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" -> "29" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x5b0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "37" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "37" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" -> "37" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "42" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "37" -> "42" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x5b8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "45" -> "42" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v46" [color="#888888", style=dashed];
  "v46" -> "42" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v48" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v48" [color="#888888", style=dashed];
  "v48" -> "42" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "49" -> "42" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "42" -> "50" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "42" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v52" [color="#888888", style=dashed];
  "v52" -> "50" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v53" [color="#888888", style=dashed];
  "v53" -> "50" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v54" [color="#888888", style=dashed];
  "v54" -> "50" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "51" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v55" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v55" [color="#888888", style=dashed];
  "v55" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v56" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "42" -> "v56" [color="#888888", style=dashed];
  "v56" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0xffffffcc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "59" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "60" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v61" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x12345678:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "37" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v63" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v63" [color="#888888", style=dashed];
  "v63" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v64" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v64" [color="#888888", style=dashed];
  "v64" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1ffffffd0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v34" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v66" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v66" [color="#888888", style=dashed];
  "v66" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "67" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "22" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x1ffffffc4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x1ffffffc8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "74" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "75" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 60]", shape=box3d, fillcolor="#20182a"];
  "77" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "80" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "81" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "81" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "81" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x1ffffffbc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "83" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "83" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "85" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x1ffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="StackStore u32\n→ ram[sp - 68]", shape=box3d, fillcolor="#20182a"];
  "86" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "88" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v89" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v89" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "90" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "91" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "88" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "88" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "94" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "94" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "97" -> "94" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v98" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v98" -> "94" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "99" -> "94" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "99" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "97" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "100" -> "97" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v101" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v101" -> "97" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "102" -> "97" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "102" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "100" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "103" -> "100" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v104" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v104" -> "100" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "105" -> "100" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "105" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "103" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
